<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vehicle_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/vehicle_image" />

    <TextView
        android:id="@+id/make_model"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:text="@string/make_model"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/price"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@+id/make_model" />

    <TextView
        android:id="@+id/description"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/border"
        android:text="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/last_update"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:text="@string/last_update"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</LinearLayout>